--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-calendar": "^4.2.1",
